--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+WARNING: THIS IS OLD CODE, PROBABLY WON'T WORK WITH NEW COCOS2D VERSION
+
 HZActionableMaskTransition allows you to create trasition for an alpha mask.
 the mask can be manipulated using an Action to create cool effects.
 
